resources/ota-stage/cincinnati-integration/cincinnati-gb.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    # Cert-manager annotation set in cincinnati.route.yaml
    # All routes using the same host share the same certificate
    haproxy.router.openshift.io/balance: source
  labels:
    service: cincinnati-graph-builder
  name: cincinnati-gb-rt-intg
spec:
  # TODO(muller): Where to get this hostname? Filed OHSS-21550
  # https://gitlab.cee.redhat.com/service/app-interface/-/blob/master/docs/app-sre/sop/add-route-for-ocm-component.md
  # I assume api.integration.openshift.com is correct b/c that's what the hive01ue1 environment says.
  host: 00b68f8b1f10413.api.integration.openshift.com
  path: /api/upgrades_info/graph-data
  port:
    targetPort: gb-public
  to:
    kind: Service
    name: cincinnati-gb-public
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
