resources/ota-stage/cincinnati-integration/cincinnati.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-prod-http
  labels:
    service: cincinnati-policy-engine
  name: cincinnati-route-intg
spec:
  # TODO(muller): Where to get this hostname? Filed OHSS-21550
  # https://gitlab.cee.redhat.com/service/app-interface/-/blob/master/docs/app-sre/sop/add-route-for-ocm-component.md
  # I assume api.integration.openshift.com is correct b/c that's what the hive01ue1 environment says.
  host: TODO.api.integration.openshift.com
  port:
    targetPort: policy-engine
  to:
    kind: Service
    name: cincinnati-policy-engine
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
